opam-version: "2.0"
authors: "Xavier Leroy"
homepage: "https://github.com/xavierleroy/ocamlagrep"
bug-reports: "https://github.com/xavierleroy/ocamlagrep/issues"
dev-repo: "git+https://github.com/xavierleroy/ocamlagrep"
maintainer: "Xavier Leroy"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs
    "@install"
    "@doc" {with-doc}]
]

depends: [
  "ocaml" {>= "3.04"}
  "dune"
]

synopsis: "String searching with errors, using the Wu-Manber algorithm"
description: """
This library implements the Wu-Manber algorithm for string searching
with errors, popularized by the "agrep" Unix command and the "glimpse"
file indexing tool.  It was developed as part of a search engine for a
largish MP3 collection; the "with error" searching comes handy for those
who can't spell Liszt or Shostakovitch.
"""
